issue# 121
table button changes

Added icons for bids, accept, deny, and details.
Took out some unnecessary shipment fields from tables.
Got rid of the horizontal scroll bar.
Added the direct shipment to form, got rid of the carrier container
borders and centered the radio dials.

--- a/webrouting/src/main/resources/static/styles/main.css
+++ b/webrouting/src/main/resources/static/styles/main.css
@@ -24,6 +24,7 @@ html, body {
 body {
 	background: #fff;
 	font-family: Sans-serif;
+	overflow-x: hidden;
 }
 
 
