--- a/webrouting/src/main/resources/static/styles/table1.css
+++ b/webrouting/src/main/resources/static/styles/table1.css
@@ -1,18 +1,16 @@
 table {
   border-collapse: collapse;
-  width: 100%;
-}
-
-table {
   border: 1px solid green;
   border-radius: 10px;
+  table-layout: auto;
+  width: 180px;
 }
 
 table td {
   word-wrap: break-word;
   max-width: 100%;
   border: 1px solid black;
-  padding: 5px;
+  padding: 2px;
 }
 
 th, td {
